Add weather example

--- a/1. Einführung.ipynb
+++ b/1. Einführung.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -82,7 +82,7 @@
        "int"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "float"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -128,7 +128,7 @@
        "str"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -153,7 +153,7 @@
        "'spam spam'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a1bd27f4633f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-a1bd27f4633f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
      ]
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "10.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,20 +289,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def function_with_result(spam):\n",
     "    return spam\n"
@@ -310,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +326,7 @@
     }
    },
    "source": [
-    "_ __Beispiel__ _\n",
+    "___Beispiel___\n",
     "\n",
     "Erstelle einen sehr einfachen Taschenrechner. Der Benutzer soll aufgefordert werden zwei Zahlen ein zu geben und das Programm gibt die Summe dieser beiden Zahlen zurück.\n",
     " \n",
@@ -352,13 +341,13 @@
     }
    },
    "source": [
-    "__ _Ausführen einer Pythondatei_ __\n",
+    "**_Ausführen einer Pythondatei_**\n",
     "\n",
     "_Windows_\n",
     "Normalerweise wird die Dateiendung __.py__ mit __python__ verknüpft und so kann eine Pythondatei einfach mit einen Doppelklick ausgeführt werden.\n",
     "Will man, dass beim Start des Programms keine Kommandozeile geöffnet wird kann man die Datei in __.pyw__ umwandeln.\n",
     "\n",
-    "In der Kommandozeile führt man die Datei einfach mit __python datei.py__ aus.\n",
+    "In der Kommandozeile führt man die Datei einfach mit __py datei.py__ aus.\n",
     "\n",
     "_Linux oder Mac_\n",
     "Hier wird die Datei einfach im Terminal mit __python datei.py__ ausgeführt.\n",
@@ -375,7 +364,7 @@
     }
    },
    "source": [
-    "__ _Aufbau einer Pythondatei_ __\n",
+    "___Aufbau einer Pythondatei___\n",
     "\n",
     "Die ersten Zeilen einer Pythondatei enthalten keine Code sondern beschreiben die Datei.\n",
     "```Python\n",
@@ -424,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -441,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -454,45 +443,10 @@
     "- %magic (%ls, %cd)\n",
     "- Ausführen von Pythondateien (%run)\n",
     "\n",
-    "Zum starten öffen die _Anacondo Prompt_ im Startmenü und tippe das Kommando `ipython` ein."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Jupyter qtconsole\n",
-    "--------------------\n",
+    "Installieren läßt sich ipython unter Windows mit folgenden Kommando in der Eingabeaufforderung\n",
+    "_py -m pip install ipython_\n",
     "\n",
-    "IPython aber mit Windowoberfläche.\n",
-    "\n",
-    "\n",
-    "Zum starten öffen die _Anacondo Prompt_ im Startmenü und tippe das Kommando `jupyter qtconsole` ein. Oder starte den _Anacondo Navigator_ und wähle dann den Punkt _qtconsole_.\n",
-    "![](img/qtconsole.png)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Jupyter notebook\n",
-    "------------------\n",
-    "Jupyter ermöglicht es Programmcode im Browser auszuführen und zu präsentieren\n",
-    "\n",
-    "[FFT-Beispiel](https://nbviewer.jupyter.org/github/unpingco/Python-for-Signal-Processing/blob/master/AUC_Derivation.ipynb)\n",
-    "\n",
-    "Ideal zur Auswertung und Aufbereitung von Daten.\n",
-    "\n",
-    "Zum starten einfach _Jupyter notebook_ im Startmenü starte oder in der _Anaconda Prompt_ `jupyter notebook` aufrufen.\n"
+    "Zum starten öffnet man die Eingabeaufforderung und ruft _c:\\Users\\\\**Benutzername**\\AppData\\Local\\Programs\\Python\\Python37\\Scripts>ipython.exe_"
    ]
   },
   {
@@ -511,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +482,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c88e6ec52de6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule_var\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction_var\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Nicht definiert\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-c88e6ec52de6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule_var\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction_var\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Nicht definiert\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'function_var' is not defined"
      ]
     }
@@ -556,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -608,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -619,6 +573,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Das geht\n",
       "Das geht\n"
      ]
     }
@@ -631,7 +586,8 @@
     "    GLOBAL_VAR = 'Das geht'\n",
     "    print(GLOBAL_VAR)\n",
     "    \n",
-    "ham()"
+    "ham()\n",
+    "print(GLOBAL_VAR)"
    ]
   },
   {
@@ -669,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +634,7 @@
        "'Copyright (c) 2001-2017 Python Software Foundation.\\nAll Rights Reserved.\\n\\nCopyright (c) 2000 BeOpen.com.\\nAll Rights Reserved.\\n\\nCopyright (c) 1995-2001 Corporation for National Research Initiatives.\\nAll Rights Reserved.\\n\\nCopyright (c) 1991-1995 Stichting Mathematisch Centrum, Amsterdam.\\nAll Rights Reserved.'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -729,10 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sub_module"
@@ -751,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +714,7 @@
        "42"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +842,8 @@
     ">\n",
     "> Mit den folgende Codebaustein kann man eine Pythondatei als Startdatei und Importmodul verwenden.\n",
     "> \n",
-    "> ```Python\n",
+    "> \n",
+    "```Python\n",
     "if __name__ == '__main__':\n",
     "    #Code hier wird nur ausgeführt wenn es die Startdatei ist.\n",
     "    #Wurde die Datei importiert wird der Code nicht ausgeführt,\n",
@@ -910,7 +865,7 @@
     "- Erstelle ein Pythonmodul mit Funktionen für die 4 Grundrechenarten (Beachte den Aufbau einer Pythondatei)\n",
     "- Gebe das Ergebnis von Berechnungen auf den Bildschirm aus. Für jede Grundrechnenart mindestens eine Berechnung\n",
     "- Verwende die Funktionen in einem zweiten Modul, ohne dass die Berechnungen aus dem ersten Modul ausgeführt werden\n",
-    "- Verwende die Funktionen in der Pythonkonsole der IDE, ipython, jupyter qtconsole, jupyter notebook\n"
+    "\n"
    ]
   }
  ],
@@ -932,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
