--- a/4. Fahrtenbuch.ipynb
+++ b/4. Fahrtenbuch.ipynb
@@ -30,37 +30,6 @@
     }
    },
    "source": [
-    "### Installieren von Packten vom PyPi\n",
-    "\n",
-    "Um Pakete vom Python Package Index zu installieren gibt es sehr hilfreiches Tool: pip. Mit dem folgende Kommando in der Kommandozeile kann man ganz einfach ein Paket installieren. \n",
-    "\n",
-    "```bash\n",
-    "pip install paketname\n",
-    "```\n",
-    "\n",
-    "Eine Liste aller installierten Pakete bekommte man mit\n",
-    "\n",
-    "```bash\n",
-    "pip list\n",
-    "```\n",
-    "\n",
-    "Und nicht mehr benötigte Pakte kann man \n",
-    "\n",
-    "```bash\n",
-    "pip uninstall\n",
-    "```\n",
-    "\n",
-    "entfernen\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "### Google Maps Module\n",
     "\n",
     "Für die 1. Aufgabe, das Routing, gibt im PyPi u.a. das Modul \"GoogleMaps\". Dieses nutzt das die von Google bereitgestellte Schnittstelle zu den Routingsystem von Google Maps. Der kleine Nachteil dieses Moduls ist, dass man zur Benutzung angemeldt sein muss und einen sogenannten API_KEY braucht. Diesen kann jeder mit einen Google Account unter https://developers.google.com/maps/documentation/directions/get-api-key#client-id anforden. \n",
@@ -82,7 +51,7 @@
     "Bevor man Anfragen an den GoogleMaps-Server stellen kann muß man sich erstmal anmelden.\n",
     "\n",
     "```python\n",
-    "    googlemaps.client(key='AIzaSyAXGYRrGVpO4KXA2TJziog2LTnOa6StCOQ')\n",
+    "    googlemaps.client(key='xxxxxxxxx')\n",
     "```\n",
     "\n",
     "Die Funktion gibt eine Client zurück, der verschiedene Methoden besitzt, für uns ist die Methode \n",
@@ -174,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
