--- a/6. Klassen.ipynb
+++ b/6. Klassen.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Klassen\n",
     "\n",
@@ -15,14 +19,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![classes](classes.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Methoden\n",
     "\n",
@@ -54,7 +66,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Konstruktor\n",
     "\n",
@@ -76,16 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "class Konto:\n",
     "    \n",
     "    def __init__(self, inhaber, kontonummer, kontostand): \n",
     "        self.Inhaber = inhaber \n",
-    "        self.Kontonummer = kontonummer \n",
-    "        self.Kontostand = kontostand \n",
+    "        self.__kontonummer = kontonummer \n",
+    "        self.__kontostand = kontostand \n",
     "        \n",
     "    def ueberweisen(self, ziel, betrag): \n",
     "        pass \n",
@@ -94,13 +114,17 @@
     "    def auszahlen(self, betrag): \n",
     "        pass \n",
     "    def kontostand(self): \n",
-    "        pass"
+    "        return self.__kontostand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -108,14 +132,58 @@
        "3.14"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mein_konto = Konto('ich', 123456, 3.14)\n",
-    "mein_konto.Kontostand"
+    "mein_konto.kontostand()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Sparkonto(Konto):\n",
+    "    def __init__(self, inhaber, kontonummer, kontostand, zinssatz):\n",
+    "        super(Sparkonto, self).__init__(inhaber, kontonummer, kontostand)\n",
+    "        self.__zinssatz = zinssatz\n",
+    "        \n",
+    "    def zinsatz(self):\n",
+    "        return self.__zinsatz\n",
+    "    \n",
+    "    def neuer_kontostand(self, jahre):\n",
+    "        return self.kontostand() * pow(1 + self.__zinssatz / 100.0, jahre)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "102.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spar_konto = Sparkonto('ich', 100100100, 100, 2)\n",
+    "spar_konto.neuer_kontostand(1)"
    ]
   },
   {
@@ -127,6 +195,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
